# actinia-gdi

./: .coveragerc  .dockerignore  .flake8  .gitignore  .travis.yml  MANIFEST.in  README.md  actinia-module.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8.yml
actinia_gdi/: __init__.py  endpoints.py  main.py  wsgi.py
actinia_gdi/api/: actinia_modules.py  common.py  files.py  gdi_ephemeral_processing_with_export.py  gdi_processing.py  grassmodule.py  grassmodule_management.py  metadata.py  resources.py
actinia_gdi/apidocs/: files.py  gmodules.py  grassmodule.py  metadata.py
actinia_gdi/core/: actiniaCore.py  actinia_module.py  common.py  gmodulesActinia.py  gmodulesGrass.py  gmodulesParser.py  gmodulesProcessor.py  gnos.py  gnosParser.py  gnosReader.py  gnosWrite.py  gnosWriter.py  grassmodule.py  jobtable.py  pcBuilder.py  processes.py  redis_actinia_module.py
actinia_gdi/model/: geodata.py  gmodules.py  grassmodule.py  jobtabelle.py  responseModels.py
actinia_gdi/resources/: cli.py  config.py  logging.py  templating.py
actinia_gdi/static/: index.html  swagger.json
actinia_gdi/templates/: README.md
config/mount/: sample.ini
docker/: README.md  docker-compose-plugin-prod.yml  docker-compose-plugin.yml  docker-compose.yml
docker/actinia-core/: Dockerfile  actinia-gdi.cfg  actinia.cfg  start-dev.sh  start.sh
docker/actinia-gdi-data/: sample.ini
docker/postgresql_init_data/: gis.sql  gnos_filled.sql
docker/release/: Dockerfile  README.md
docker/s2i-actinia-gdi-builder/: Dockerfile  gunicorn.cfg
s2i-actinia-gdi-builder/: Dockerfile
tests/: conftest.py  test_actiniaCore.py  test_api_resources.py  test_gnos.py  test_main.py  test_resources_cli.py
tests/resources/: postbody.processes.failure.json  postbody.processes.success.json  showcase.sh
tests/tests_actinia_core_plugin/: test_actiniamodules.py  test_grassmodules.py  test_virtualmodules.py
tests/tests_common/: test_main.py  test_resources_cli.py  testsuite.py
tests/tests_standalone_app/: test_actiniaCore.py  test_api_resources.py  test_main.py
(+61 files in other folders)
