[metadata]
name = actinia_gdi.wsgi
description = A (RESTFUL) Flask application which connects actinia-core to the general GDI including metadata and databases
author = Carmen Tawalika
author-email = tawalika@mundialis.de
license = apache-2.0
url = https://github.com/mundialis/actinia-gdi
long-description = file: README.md
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.
# Case when actinia-gdi ist installed as standalone app:
# install_requires = colorlog;Flask;Flask-Cors;Flask-RESTful;flask-restful-swagger-2;jsonmodels;peewee;psycopg2-binary;requests;xmltodict;
# Case when actinia-gdi is installed as actinia-core plugin:
install_requires = colorlog;jsonmodels;requests;xmltodict;
tests_require = pytest; pytest-cov; pwgen

[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# for debugging in tests, see https://docs.pytest.org/en/latest/usage.html
addopts =
    --cov actinia_gdi --cov-report term-missing
    --verbose --tb=line
    -x --pdb
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.0.3
package = actinia_gdi
